--- a/manufood-website/src/_includes/layouts/base.njk
+++ b/manufood-website/src/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">  
 </head>
 <body>
     {% include "partials/nav.njk" %}
@@ -17,5 +17,6 @@
     {% include "partials/footer.njk" %}
     <script src="/js/nav.js"></script>
     <script src="/js/theme.js"></script>
+    <script src="/js/copy-menu.js"></script>
 </body>
 </html>
