order flow messaging fixes

--- a/manufood-website/src/_includes/partials/menu-items.njk
+++ b/manufood-website/src/_includes/partials/menu-items.njk
@@ -12,5 +12,5 @@
       {% endfor %}
     </ul>
   {% endfor %}
-  <button class="copy-menu-btn">Copy Order and Message</button>
+  <button class="copy-menu-btn">Copy order, paste to message and send</button>
 </div>
