--- a/manufood-website/src/index.njk
+++ b/manufood-website/src/index.njk
@@ -111,7 +111,7 @@ menu:
       <div class="step">
         <div class="step-number">2</div>
         <h3>Place Order</h3>
-        <p> Upadte the order, copy and message  </p>
+        <p> Update the order, copy and message  </p>
         <p>SMS Juliya: 0416019891</p>
       </div>
       <div class="step">
